--- a/src/about.html
+++ b/src/about.html
@@ -117,7 +117,7 @@
   <main class="pt-24">
     <section id="history" class="relative bg-cover bg-center">
       <div class="absolute inset-0 bg-no-repeat bg-center bg-cover opacity-20"
-        style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)), url('../assets/main_background.jpg'); pointer-events: none;">
+        style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)), url('../assets/church\ exterior.jpeg'); pointer-events: none;">
       </div>
       <div class="text-justify text-black text-lg p-6 relative">
         <h1 class="text-2xl text-shRed font-bold pb-4 relative after:content-[''] after:block after:h-1 after:bg-yellow-500 after:absolute after:left-0 after:bottom-0 after:w-full after:mt-2">
