--- a/src/faith_formation.html
+++ b/src/faith_formation.html
@@ -129,7 +129,7 @@
         <br>
 
         <div
-          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 p-6 justify-items-center w-full pt-6">
+          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 justify-items-center w-full pt-6">
 
           <div
             class="group relative rounded-xl overflow-hidden shadow-xl w-full h-auto border-4 border-yellow-500 hover:border-4 hover:border-shRed text-justify transform hover:scale-102 transition duration-300 ease-in-out">
@@ -160,7 +160,7 @@
         <br>
 
         <div
-          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 p-6 justify-items-center w-full pt-6">
+          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 justify-items-center w-full pt-6">
           <div
             class="group relative rounded-xl overflow-hidden shadow-xl w-full h-auto border-4 border-yellow-500 hover:border-4 hover:border-shRed text-justify p-6 transform hover:scale-102 transition duration-300 ease-in-out flex flex-col items-center justify-center">
             <p class="pb-4 text-base">Are you interested in learning more about the Catholic Church or possibly becoming Catholic?  The Catholic Church has a two-thousand-year history since its birth on the day of Pentecost so there is much to explore and learn about the Church and how we come to a deeply personal yet communal relationship to Jesus Christ through the Church that He started.  The RCIA starts with a period of Inquiry so those interested can ask questions to learn about Church beliefs, history and daily life in a casual environment.  The Inquiry is followed by the period of the Catechumen.  This starts with the Rite of Welcome by the Church to all who wish to continue on the journey and are seriously thinking of becoming Catholic.  More in-depth learning is coupled with a period of faith formation as those on the journey experience a more spiritual time as a Catholic friend will walk the rest of way with you. The third period is one of Purification and Enlightenment during the season of Lent and begins with the Rite of Election.  All leading up to the Easter Vigil Mass.  So, if you are just interested in learning more about the Church or have decided to seriously pursue becoming Catholic the RCIA (Rite of Christian Initiation for Adults) is the place for you.</p>
@@ -186,7 +186,7 @@
         <br>
 
         <div
-          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 p-6 justify-items-center w-full pt-6">
+          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 justify-items-center w-full pt-6">
 
           <div
             class="group relative rounded-xl overflow-hidden shadow-xl w-full h-auto border-4 border-yellow-500 hover:border-4 hover:border-shRed text-justify transform hover:scale-102 transition duration-300 ease-in-out">
