--- a/src/home.html
+++ b/src/home.html
@@ -10,81 +10,89 @@
 
 <body class="bg-white" style="font-family:'Playfair Display', serif;">
 
-<!-- header -->
-<header class="w-full h-auto bg-white fixed top-0 left-0 right-0 z-50 bg-opacity-90">
-    <nav class="container mx-auto p-1 flex justify-between items-center w-full">
-      <img src="../assets/SHCCLogoBlack.png" class="h-16 md:h-20" alt="Church logo">
-      <div class="md:hidden">
-        <button id="hamburger-button" class="text-black hover:text-shRed">
-          <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-          </svg>
-        </button>
-      </div>
-      <ul id="nav-links" class="hidden md:flex space-x-8 text-xl">
-        <li><a href="./home.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Home</a>
-        </li>
-        <li class="group relative"><a href="./about.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">About
-            Us</a>
-          <ul
-            class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
-            <li><a href="./about.html#history" class="block px-4 py-2 hover:bg-shRed hover:text-white">History</a></li>
-            <li><a href="./about.html#staff" class="block px-4 py-2 hover:bg-shRed hover:text-white">Staff</a></li>
-            <li><a href="./about.html#mass_schedule" class="block px-4 py-2 hover:bg-shRed hover:text-white">Mass
-                Schedule</a></li>
-            <li><a href="./about.html#pastors_message" class="block px-4 py-2 hover:bg-shRed hover:text-white">Pastors
-                Message</a></li>
-          </ul>
-        </li>
-        <li class="group relative"><a href="./faith_formation.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Faith
-            Formation</a>
-          <ul
-            class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
-            <li><a href="./faith_formation.html#religious_education"
-              class="block px-4 py-2 hover:bg-shRed hover:text-white">Religious Education</a></li>
-            <li><a href="./faith_formation.html#adult_faith_formation"
-                class="block px-4 py-2 hover:bg-shRed hover:text-white">Adult Faith Formation</a></li>
-            <li><a href="./faith_formation.html#RCIA" class="block px-4 py-2 hover:bg-shRed hover:text-white">Rite Of
-                Christian Initiation -
-                RCIA</a></li>
-            
-            
-          </ul>
-        </li>
-        <li class="group relative"><a href="./ministries.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Ministries</a>
-          <ul
-            class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
-            <li><a href="./ministries.html#liturgical_ministries"
-                class="block px-4 py-2 hover:bg-shRed hover:text-white">Liturgical Ministries</a></li>
-            <li><a href="./ministries.html#parish_ministries"
-                class="block px-4 py-2 hover:bg-shRed hover:text-white">Parish Ministries</a></li>
-          </ul>
-        </li>
-        <li><a href="./youth_ministry.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Youth
-            Ministry</a></li>
-        <li class="group relative"> <a href="./contact.html"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Contact</a>
-          <ul
-            class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
-            <li><a href="./contact.html#contact_us" class="block px-4 py-2 hover:bg-shRed hover:text-white">Contact
-                Us</a></li>
-            <li><a href="./contact.html#register_as_parishioner"
-                class="block px-4 py-2 hover:bg-shRed hover:text-white">Register as a Parishioner</a>
-            </li>
-          </ul>
-        </li>
-        <li><a href="https://shcsjax.com/"
-            class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Sacred
-            Heart School</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!-- header -->
+    <!-- header -->
+    <header class="w-full h-auto bg-white fixed top-0 left-0 right-0 z-50 bg-opacity-90">
+        <nav class="container mx-auto p-1 flex justify-between items-center w-full">
+            <img src="../assets/SHCCLogoBlack.png" class="h-16 md:h-20" alt="Church logo">
+            <div class="md:hidden">
+                <button id="hamburger-button" class="text-black hover:text-shRed">
+                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
+                </button>
+            </div>
+            <ul id="nav-links" class="hidden md:flex space-x-8 text-xl">
+                <li><a href="./home.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Home</a>
+                </li>
+                <li class="group relative"><a href="./about.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">About
+                        Us</a>
+                    <ul
+                        class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
+                        <li><a href="./about.html#history"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">History</a></li>
+                        <li><a href="./about.html#staff"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Staff</a></li>
+                        <li><a href="./about.html#mass_schedule"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Mass
+                                Schedule</a></li>
+                        <li><a href="./about.html#pastors_message"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Pastors
+                                Message</a></li>
+                    </ul>
+                </li>
+                <li class="group relative"><a href="./faith_formation.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Faith
+                        Formation</a>
+                    <ul
+                        class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
+                        <li><a href="./faith_formation.html#religious_education"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Religious Education</a></li>
+                        <li><a href="./faith_formation.html#adult_faith_formation"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Adult Faith Formation</a></li>
+                        <li><a href="./faith_formation.html#RCIA"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Rite Of
+                                Christian Initiation -
+                                RCIA</a></li>
+
+
+                    </ul>
+                </li>
+                <li class="group relative"><a href="./ministries.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Ministries</a>
+                    <ul
+                        class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
+                        <li><a href="./ministries.html#liturgical_ministries"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Liturgical Ministries</a></li>
+                        <li><a href="./ministries.html#parish_ministries"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Parish Ministries</a></li>
+                    </ul>
+                </li>
+                <li><a href="./youth_ministry.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Youth
+                        Ministry</a></li>
+                <li class="group relative"> <a href="./contact.html"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Contact</a>
+                    <ul
+                        class="absolute hidden group-hover:block bg-white border border-gray-300 rounded-md shadow-lg whitespace-nowrap overflow-hidden">
+                        <li><a href="./contact.html#contact_us"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Contact
+                                Us</a></li>
+                        <li><a href="./contact.html#register_as_parishioner"
+                                class="block px-4 py-2 hover:bg-shRed hover:text-white">Register as a Parishioner</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="https://shcsjax.com/"
+                        class="text-black hover:text-shRed py-2 relative hover:after:content-[''] hover:after:absolute hover:after:left-0 hover:after:bottom-0 hover:after:h-1 hover:after:w-full hover:after:bg-shRed">Sacred
+                        Heart School</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- header -->
 
     <!-- Full-screen side menu -->
     <div id="side-menu"
@@ -115,8 +123,8 @@
 
     <main>
         <section id="home" class="relative">
-            <img src="../assets/red background main.JPG" class="w-full h-screen object-cover" alt="Church interior">
-            <div class="absolute inset-0 bg-black opacity-60 hover:opacity-30 transition duration-300"></div>
+            <img src="../assets/red background main.jpeg" class="w-full h-screen object-cover" alt="Church interior">
+            <div class="absolute inset-0 bg-black opacity-50 hover:opacity-30 transition duration-300"></div>
             <div class="absolute bottom-4 left-4">
                 <h1 class="text-3xl font-bold text-white whitespace-nowrap">
                     Welcome to
@@ -140,59 +148,65 @@
 
         <div
             class="container mx-auto relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 p-4 justify-items-center w-full pt-12 flex-wrap">
-
-            <div class="bg-shRed rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
-                <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-shRed fill-white transition duration-300"
-                    xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
-                    viewBox="0 0 24 24" width="24px">
-                    <g>
-                        <rect fill="none" height="24" width="24" />
-                    </g>
-                    <g>
+            <a href="./about.html#history" class="block">
+                <div
+                    class="bg-shRed rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
+                    <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-shRed fill-white transition duration-300"
+                        xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
+                        viewBox="0 0 24 24" width="24px">
+                        <g>
+                            <rect fill="none" height="24" width="24" />
+                        </g>
+                        <g>
+                            <g>
+                                <path
+                                    d="M18,12.22V9l-5-2.5V5h2V3h-2V1h-2v2H9v2h2v1.5L6,9v3.22L2,14v8h8v-3c0-1.1,0.9-2,2-2s2,0.9,2,2v3h8v-8L18,12.22z M12,13.5 c-0.83,0-1.5-0.67-1.5-1.5s0.67-1.5,1.5-1.5s1.5,0.67,1.5,1.5S12.83,13.5,12,13.5z" />
+                            </g>
+                        </g>
+                    </svg>
+                    <h1
+                        class="text-2xl font-bold text-white text-center mb-2 group-hover:text-shRed transition duration-300">
+                        About our Parish</h1>
+                </div>
+            </a>
+            <a href="https://discovermass.com/church/sacred-heart-jacksonville-fl/#bulletins" class="block">
+                <div
+                    class="bg-yellow-500 rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
+                    <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-yellow-500 fill-white transition duration-300"
+                        xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
+                        viewBox="0 0 24 24" width="24px">
+                        <g>
+                            <rect fill="none" height="24" width="24" />
+                        </g>
                         <g>
                             <path
-                                d="M18,12.22V9l-5-2.5V5h2V3h-2V1h-2v2H9v2h2v1.5L6,9v3.22L2,14v8h8v-3c0-1.1,0.9-2,2-2s2,0.9,2,2v3h8v-8L18,12.22z M12,13.5 c-0.83,0-1.5-0.67-1.5-1.5s0.67-1.5,1.5-1.5s1.5,0.67,1.5,1.5S12.83,13.5,12,13.5z" />
+                                d="M22,3l-1.67,1.67L18.67,3L17,4.67L15.33,3l-1.66,1.67L12,3l-1.67,1.67L8.67,3L7,4.67L5.33,3L3.67,4.67L2,3v16 c0,1.1,0.9,2,2,2l16,0c1.1,0,2-0.9,2-2V3z M11,19H4v-6h7V19z M20,19h-7v-2h7V19z M20,15h-7v-2h7V15z M20,11H4V8h16V11z" />
                         </g>
-                    </g>
-                </svg>
-                <h1
-                    class="text-2xl font-bold text-white text-center mb-2 group-hover:text-shRed transition duration-300">
-                    About our Parish</h1>
-            </div>
+                    </svg>
+                    <h1
+                        class="text-2xl font-bold text-white text-center mb-2 group-hover:text-yellow-500 transition duration-300">
+                        Church Bulletin</h1>
+                </div>
+            </a>
 
-            <div
-                class="bg-yellow-500 rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
-                <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-yellow-500 fill-white transition duration-300"
-                    xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
-                    viewBox="0 0 24 24" width="24px">
-                    <g>
-                        <rect fill="none" height="24" width="24" />
-                    </g>
-                    <g>
-                        <path
-                            d="M22,3l-1.67,1.67L18.67,3L17,4.67L15.33,3l-1.66,1.67L12,3l-1.67,1.67L8.67,3L7,4.67L5.33,3L3.67,4.67L2,3v16 c0,1.1,0.9,2,2,2l16,0c1.1,0,2-0.9,2-2V3z M11,19H4v-6h7V19z M20,19h-7v-2h7V19z M20,15h-7v-2h7V15z M20,11H4V8h16V11z" />
-                    </g>
-                </svg>
-                <h1
-                    class="text-2xl font-bold text-white text-center mb-2 group-hover:text-yellow-500 transition duration-300">
-                    Church Bulletin</h1>
-            </div>
-
-            <div class="bg-shRed rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
-                <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-shRed fill-white transition duration-300"
-                    xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
-                    viewBox="0 0 24 24" width="24px">
-                    <g>
-                        <rect fill="none" height="24" width="24" />
-                    </g>
-                    <g>
-                        <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3 1 9l11 6 9-4.91V17h2V9L12 3z" />
-                    </g>
-                </svg>
-                <h1
-                    class="text-2xl font-bold text-white text-center mb-2 group-hover:text-shRed transition duration-300">
-                    Sacred Heart School</h1>
-            </div>
+            <a href="https://shcsjax.com/" class="block">
+                <div
+                    class="bg-shRed rounded-xl shadow-xl p-6 w-full md:w-80 group hover:bg-white transition duration-300">
+                    <svg class="h-24 w-24 object-contain mx-auto mb-4 group-hover:fill-shRed fill-white transition duration-300"
+                        xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px"
+                        viewBox="0 0 24 24" width="24px">
+                        <g>
+                            <rect fill="none" height="24" width="24" />
+                        </g>
+                        <g>
+                            <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3 1 9l11 6 9-4.91V17h2V9L12 3z" />
+                        </g>
+                    </svg>
+                    <h1
+                        class="text-2xl font-bold text-white text-center mb-2 group-hover:text-shRed transition duration-300">
+                        Sacred Heart School</h1>
+                </div>
+            </a>
 
         </div>
 
